# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-04-27 21:54:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-9

    Summary:
      Adjusted definition of defaults to not explicitly pass sname, oname all the time
    Revision:
      missinglib--head--0.0--patch-9


    modified files:
     ChangeLog libsrc/configParser/configParser.ml


2004-04-27 21:52:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-8

    Summary:
      Default support compiles
    Revision:
      missinglib--head--0.0--patch-8


    modified files:
     ChangeLog libsrc/configParser/configParser.ml
     libsrc/configParser/configParser.mli


2004-04-27 21:45:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-7

    Summary:
      Further experimentation
    Revision:
      missinglib--head--0.0--patch-7


    modified files:
     ChangeLog libsrc/configParser/configParser.ml


2004-04-27 21:11:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-6

    Summary:
      First go at default stuff
    Revision:
      missinglib--head--0.0--patch-6


    modified files:
     ChangeLog libsrc/configParser/configParser.ml


2004-04-27 14:41:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-5

    Summary:
      Initial add of interpolation functions
    Revision:
      missinglib--head--0.0--patch-5


    new files:
     libsrc/configParser/configParser_interp.ml

    modified files:
     ChangeLog libsrc/Makefile
     libsrc/configParser/configParser_interp_lexer.mll


2004-04-27 13:25:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-4

    Summary:
      First draft of configparser interpolation lexer
    Revision:
      missinglib--head--0.0--patch-4


    new files:
     libsrc/configParser/configParser_interp_lexer.mll

    modified files:
     ChangeLog


2004-04-23 18:36:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-3

    Summary:
      Fixed debian/rules typo
    Revision: